--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "chalk": "^5.4.1",
+    "connect": "^3.7.0",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "mongo": "^0.1.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
@@ -25,6 +28,7 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "sanitize-html": "^2.17.0",
     "sharp": "^0.34.1",
     "uuid": "^11.1.0"
   }
