--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^5.4.1",
     "connect": "^3.7.0",
     "connect-mongo": "^5.1.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
@@ -29,6 +30,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.1",
+    "razorpay": "^2.9.6",
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.1",
     "uuid": "^11.1.0"
