--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "chalk": "^5.4.1",
+    "cloudinary": "^1.41.3",
     "connect": "^3.7.0",
     "connect-mongo": "^5.1.0",
     "crypto": "^1.0.1",
@@ -24,7 +25,9 @@
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nocache": "^4.0.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
